--- a/stack.yaml
+++ b/stack.yaml
@@ -45,7 +45,7 @@ extra-deps:
   - lazysmallcheck-0.6
   - HCodecs-0.5.1
 
-# Override default flag values for local packages and extra-deps
+# modifyride default flag values for local packages and extra-deps
 # flags: {}
 
 # Extra package databases containing global packages
@@ -58,7 +58,7 @@ extra-deps:
 # require-stack-version: -any # Default
 # require-stack-version: ">=1.9"
 #
-# Override the architecture used by stack, especially useful on Windows
+# modifyride the architecture used by stack, especially useful on Windows
 # arch: i386
 # arch: x86_64
 #
